--- a/src/routes/dashboard/tabs/entry-form/entry-form.sass
+++ b/src/routes/dashboard/tabs/entry-form/entry-form.sass
@@ -3,7 +3,7 @@
 .entry-form
   display: flex
   flex-direction: column
-  position: relative
+  position: absolute
   z-index: 5
   overflow-y: auto
   background: var(--colorBackground)
@@ -35,6 +35,9 @@
     
     .btn
       font-size: 1rem
+
+      &.clear
+        font-size: 1em
 
       &.invisible
         opacity: 0
