updated save button

--- a/src/components/button/button.sass
+++ b/src/components/button/button.sass
@@ -46,7 +46,7 @@
       &:hover
         background: var(--colorAccent)
 
-  &.next, &.prev, &.close, &.save, &.search
+  &.next, &.prev, &.close, &.search
     display: flex
     border-radius: 50%
     width: 3em
@@ -54,6 +54,10 @@
     padding: 0
     align-items: center
     justify-content: center
+  
+  &.save
+    width: 6em
+    margin-left: -3em
   
   &.link
     padding: 0
