--- a/src/routes/dashboard/tabs/entry-form/entry-form.sass
+++ b/src/routes/dashboard/tabs/entry-form/entry-form.sass
@@ -14,6 +14,7 @@
     height: 100%
     overflow-y: auto
     border-bottom: none
+    position: static
   
   header
     margin: calc(-1 * var(--sizePadding))
